<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbarColor"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/infoImageIV"
        android:layout_width="@dimen/_300dp"
        android:layout_height="@dimen/_300dp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInfo" />

    <GridLayout

        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:columnCount="1"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoImageIV">

        <TextView
            android:id="@+id/infoNameTV"
            android:gravity="center"
            android:layout_width="match_parent"
            android:hint="@string/hint_name_TV"
            android:textSize="@dimen/_24sp" />

        <TextView
            android:id="@+id/infoPriceTV"
            android:gravity="end"
            android:layout_width="match_parent"
            android:hint="@string/hint_price_TV"
            android:textSize="@dimen/_30sp" />

        <TextView
            android:id="@+id/infoInfoTV"
            android:layout_width="match_parent"
            android:hint="@string/hint_info_TV" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>