<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbarColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSecond">

        <EditText
            android:id="@+id/nameET"
            android:layout_row="0"
            android:layout_column="1"
            android:hint="@string/text_input_name_ET"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/priceET"
            android:layout_row="1"
            android:layout_column="1"
            android:hint="@string/text_input_price_ET"
            android:textStyle="italic" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewIV"
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_80dp"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_column="0"
            android:layout_margin="@dimen/_8dp"
            android:src="@drawable/ic_product" />
    </GridLayout>

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:text="@string/text_save_BTN"
        android:textSize="@dimen/_20sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@+id/saveBTN">

        <ListView
            android:id="@+id/listViewLV"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>